--- a/package.json
+++ b/package.json
@@ -5,18 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run dev:*\"",
-    "dev:server": "json-server db.json",
+    "dev:server": "json-server database/db.json",
     "dev:cleint": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.15",
-    "@tanstack/react-query": "^5.69.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.15"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -37,6 +34,9 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "tailwindcss": "^4.0.15",
+    "@tailwindcss/vite": "^4.0.15",
+    "@tanstack/react-query": "^5.69.0"
   }
 }
